# ai-drone-safety-monitoring

./: .dockerignore  .gitignore  .gitlab-ci.yml  ARCHITECTURE_PLAN.md  DIAGNOSTIC_REPORT.md  Dockerfile  ERROR_LOG_FIXES.md  README.md  REFACTOR_COMPLETION_SUMMARY.md  ai-monitor-poc.ipynb  data.yaml  data_human.yaml  data_ship.yaml  demo_validation.py  gitlab-ci.yml  logger.py  main.py  old_drone_control.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
ai-safety-monitoring-jy/: .gitignore  data_bridge.yaml
config/: default.yaml  feeds.yaml
data/bridge_dataset/: data.yaml
data/human_dataset/: data.yaml
data/human_dataset_real/: data.yaml
data/human_dataset_sim/: data.yaml
data/human_labels/: suggested-Rf6z5MKMqliXzddAMSsM_jpg.rf.92371b38636a525e471ec2a988d578d4.txt  suggested-hhFaD71gfpD4xdNKKULr_jpg.rf.55019e75fd6eee006c2f06d896b5bc35.txt  suggested-iW1XgzmWxL9E3MypxA6J_jpg.rf.f43f1e17eb568f7f13bd58510b957962.txt  suggested-jibtvPKeGWXgJ2qMm353_jpg.rf.0e4159c1c57b22450874674fdbddd36b.txt  suggested-lc7dtAJmDr0WFZhFyLak_jpg.rf.359c55f403e145f05a527bc6ca94838c.txt  test_image_webp.rf.74dfec475382d3cd809beec602ccffc6.txt
data/ship_dataset/: data.yaml
docs/plans/: 2026-02-12-bugfix-4-issues-design.md
scripts/: curate_dataset.py  demo_validation.py  prepare_dataset.py  train_human_detection.py  train_scene_segmentation.py
src/: logger.py  main.py  prepare_dataset.py  utils.py
src/api/: app.py  dependencies.py
src/backend/: auto_segmentation.py  config.py  drone_client.py  server.py
src/cctv_monitoring/: cctv_monitoring.py  coord_utils.py  depth_estimation_utils.py
src/core/: alarm.py  config.py  detection_pipeline.py  models.py  zone_manager.py
src/detection/: __init__.py  depth_estimator.py  depth_estimator_wrapper.py  human_detector.py  scene_segmenter.py
src/drone-control/: config.yaml  drone.py  hover.py  observer.py
src/drone_control/: config.yaml  drone.py  observer.py
src/drone_server/: __init__.py  app.py  config.yaml  control_loop.py  drone_state.py
src/eval/: eval_alarm_trigger.py  eval_depth_estimation.py  eval_human.py  eval_latency.py  eval_model_selection.py  eval_pipeline_latency.py  eval_scene.py
src/hardware/: __init__.py
src/human_detection/: __init__.py  check_overlap.py  config.py  detector.py  prepare_dataset.py  process_video.py  realtime.py  train.py  validate_model.py  verify_dataset.py
src/scene-segmentation/: preprocess.py  train.py  visualise.py
src/scene_detection/: classifier.py  data.py  inference.py  preprocess.py  train.py
src/scene_segmentation/: train.py  visualise_ground_truth.py  visualise_predictions.py
src/services/: drone_dispatcher.py  event_logger.py  feed_manager.py  follow_mode.py  streaming.py  target_tracker.py  zone_persistence.py
src/spatial/: __init__.py  airsim_projection.py  calibration.py  coord_utils.py  (+4 more)
tests/: conftest.py  test_auto_segmentation.py
(+3093 files in other folders)
