[project]
name = "ai-safety-monitoring"
version = "0.1.0"
description = "AI-powered safety monitoring with CCTV, human detection, and drone deployment"
requires-python = ">=3.11"
dependencies = [
    # Core Image Processing
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.4,<2",
    "setuptools>=69.0.0",
    "Pillow==10.3.0",
    "ultralytics~=8.3.252",

    # Visualization & Utilities
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",

    # Deep Learning
    "torch==2.2.2",
    "torchvision==0.17.2",
    "transformers==4.40.2",
    "timm==0.9.16",

    # Simulation & Control
    "airsim>=1.8.1",
    "keyboard>=0.13.5",

    # Web API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
